[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/ai_assist/core/ais/image/chatgpt_request.gd" type="Script" id=1]
[ext_resource path="res://addons/ai_assist/ui/debugger/refactor/refactor.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.12549, 0.145098, 0.192157, 1 )

[node name="Refactor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -711, -358 )
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="ChatGPTRequest" type="HTTPRequest" parent="."]
use_threads = true
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
text = "Refactor Code"

[node name="PopupDialog" type="PopupDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Generating" type="Label" parent="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 0.5
text = "OPTIMIZING CODE"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="PopupDialog"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -225.0
margin_right = 384.0
margin_bottom = 225.0

[node name="MarginContainer" type="MarginContainer" parent="PopupDialog/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PopupDialog/Panel/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 763.0
margin_bottom = 445.0

[node name="Compare" type="HSplitContainer" parent="PopupDialog/Panel/MarginContainer/VBoxContainer"]
margin_right = 758.0
margin_bottom = 416.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SourceCode" type="RichTextLabel" parent="PopupDialog/Panel/MarginContainer/VBoxContainer/Compare"]
unique_name_in_owner = true
margin_right = 373.0
margin_bottom = 416.0
rect_min_size = Vector2( 122, 0 )
focus_mode = 2
size_flags_horizontal = 3
custom_styles/normal = SubResource( 2 )

[node name="TargetCode" type="RichTextLabel" parent="PopupDialog/Panel/MarginContainer/VBoxContainer/Compare"]
unique_name_in_owner = true
margin_left = 385.0
margin_right = 758.0
margin_bottom = 416.0
rect_min_size = Vector2( 122, 0 )
focus_mode = 2
size_flags_horizontal = 3
custom_styles/normal = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="PopupDialog/Panel/MarginContainer/VBoxContainer"]
margin_top = 420.0
margin_right = 758.0
margin_bottom = 440.0

[node name="Control" type="Control" parent="PopupDialog/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 575.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Regenerate" type="Button" parent="PopupDialog/Panel/MarginContainer/VBoxContainer/HBoxContainer/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -10.0
margin_right = 84.0
margin_bottom = 10.0
text = "Regenerate"

[node name="Apply" type="Button" parent="PopupDialog/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 579.0
margin_right = 707.0
margin_bottom = 20.0
text = "Apply Suggestions"

[node name="Close" type="Button" parent="PopupDialog/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 711.0
margin_right = 758.0
margin_bottom = 20.0
text = "Close"

[connection signal="completions_request_completed" from="ChatGPTRequest" to="." method="_on_ChatGPTRequest_completions_request_completed"]
[connection signal="pressed" from="Button" to="." method="_on_Refactor_pressed"]
[connection signal="pressed" from="PopupDialog/Panel/MarginContainer/VBoxContainer/HBoxContainer/Control/Regenerate" to="." method="_on_Regenerate_pressed"]
[connection signal="pressed" from="PopupDialog/Panel/MarginContainer/VBoxContainer/HBoxContainer/Apply" to="." method="_on_Apply_pressed"]
[connection signal="pressed" from="PopupDialog/Panel/MarginContainer/VBoxContainer/HBoxContainer/Close" to="PopupDialog" method="hide"]
